--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -9,9 +9,12 @@ $font-path: "../assets/fonts";
 // The app direction is used to include
 // rtl styles in your app. For more info, please see:
 // http://ionicframework.com/docs/theming/rtl-support/
-$app-direction: ltr;
+$app-direction: rtl;
 
-
+.img {
+  max-width: 50px;
+  border: 0;
+}
 @import "ionic.globals";
 
 
