add activation and user profile

--- a/src/components/settings/settings.html
+++ b/src/components/settings/settings.html
@@ -7,8 +7,7 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <button ion-button icon-end [navPush]="pushPage">اطلاعات کاربری
-      </button>
+      <button ion-button icon-end (click)="openUserProfile()">اطلاعات کاربری</button>
     </ion-item>
     <ion-item>
       <ion-label >ارتباط با ما</ion-label>
