--- a/src/components/quizestage/quizestage.html
+++ b/src/components/quizestage/quizestage.html
@@ -1,2 +1,2 @@
 <!-- Generated template for the QuizestageComponent component -->
-<img src="../assets/imgs/test-passed.png" style="max-width: 50px">
+<img src="../assets/imgs/test-passed.png" style="max-width: 50px" (click)="openQuize()">
